--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -1019,7 +1019,7 @@
 
 <h1><a id="c1-3"></a>1.3 Course Methodology and References</h1>
 
-<p>After the crash course above, you may feel that you’ve already learned a lot of Quenya, and you have! However, there is still more to learn. The crash course only briefly covered nouns, verbs, adjectives, and so forth, glossing over many details. The rest of the course goes over these topics again and in greater depth, covering the parts we couldn’t get to in the crash course. Later chapters also include occasional refreshers for earlier material. Presenting the same topic multiple times should make it easier for the student to absorb those concepts.</p>
+<p>After the crash course above, you may feel that you’ve already learned a lot of Quenya, and you have! However, there is still more to learn. The crash course only briefly covered nouns, verbs, adjectives, and so forth, skimming past many details. The rest of the course goes over these topics again and in greater depth, covering the parts we couldn’t get to in the crash course. Later chapters also include occasional refreshers for earlier material. Presenting the same topic multiple times should make it easier for the student to absorb those concepts.</p>
 
 <p>Another thing missing from this crash course is a discussion of <u>how</u> we know these things about the Quenya language. Any good discussion of Elvish languages should make it clear how the information presented is grounded in Tolkien’s ideas. However, Tolkien’s actual linguistic works get very complicated very quickly, making it hard for new learners to deal with.</p>
 
@@ -1038,9 +1038,9 @@
 <p>The first set of references are to major works by Tolkien himself, published before or shortly after his death.</p>
 
 <ul>
-<li><b>LotR:</b> <i>The Lord of the Rings</i>, J.R.R. Tolkien. The original books were published in 1954-55 with a second edition in 1965, but the references in this course are to the 50th Anniversary One-Volume Edition published in 2004. Later one-volume editions are close enough to the 50th Anniversary edition that the page references are easy to find.</li>
-<li><b>S:</b> <i>The Silmarillion</i>, J.R.R. Tolkien, (editor) Christopher Tolkien; 1977. Tales and legends of the early ages of Middle-earth, unfinished by Tolkien while he was alive but compiled and edited by his son Christopher, with his father’s blessing. The references in this course are to the hardback or large paperback editions.</li>
-<li><b>UT:</b> <i>Unfinished Tales of Númenor and Middle-earth</i>, J.R.R. Tolkien, (editor) Christopher Tolkien; 1980. A collection of unfinished stories organized and presented by Christopher Tolkien. The references in this course are to the hardback or large paperback editions.</li>
+<li><b>LotR:</b> <i>The Lord of the Rings</i>; J.R.R. Tolkien. The original books were published in 1954-55 with a second edition in 1965, but the references in this course are to the 50th Anniversary One-Volume Edition published in 2004. Later one-volume editions are close enough to the 50th Anniversary edition that the page references are easy to find.</li>
+<li><b>S:</b> <i>The Silmarillion</i>; J.R.R. Tolkien, (editor) Christopher Tolkien; 1977. Tales and legends of the early ages of Middle-earth, unfinished by Tolkien while he was alive but compiled and edited by his son Christopher, with his father’s blessing. The references in this course are to the hardback or large paperback editions.</li>
+<li><b>UT:</b> <i>Unfinished Tales of Númenor and Middle-earth</i>; J.R.R. Tolkien, (editor) Christopher Tolkien; 1980. A collection of unfinished stories organized and presented by Christopher Tolkien. The references in this course are to the hardback or large paperback editions.</li>
 <li><b>Let:</b> <i>Letters of J.R.R. Tolkien</i>; J.R.R. Tolkien, (editors) Humphrey Carpenter, Christopher Tolkien; 1981. A collection of Tolkien’s personal letters, including a number of notes on linguistic matters.</li>
 </ul>
 
@@ -1063,6 +1063,14 @@
 
 <p>As the <i>History of Middle-earth</i> series was winding down, Christopher Tolkien came to an arrangement with a group of scholars known as the Elvish Linguistic Fellowship, who began publishing further linguistic works in two academic journals: Vinyar Tengwar (VT) and Parma Eldalamberon (PE). Although the journals existed before this, starting with PE11 in 1995 and VT39 in 1998, they began editing and publishing previously unknown linguistic works of Tolkien’s, with smaller works in VT and larger works in PE. We would know almost nothing of Tolkien’s languages if it were not for the tireless efforts of Christopher Tolkien and the ELF team: Christopher Gilson, Carl Hostetter, Arden Smith, Bill Welden, and Patrick Wynne.</p>
 
+<p>A few additional sources used in this course are:</p>
+
+<ul>
+<li><b>MC:</b> <i>The Monsters and the Critics</i>; J.R.R. Tolkien, (editor) Christopher Tolkien. A collection of essays by Tolkien, the most notable of which is “A Secret Vice”, an essay on language invention with a number of sample Elvish poems composed by Tolkien around 1930. It also includes a later versions of one of the poems, the <i>Markirya</i> poem, written in the 1960s.</li>
+<li><b>NM:</b> <i>Nature of Middle Earth</i>; J.R.R. Tolkien, (editor) Carl Hostetter. A collection of essays and notes by Tolkien focusing on various elements of Elvish life and the nature of Middle Earth itself.</li>
+<li><b>RGEO:</b> <i>The Road Goes Ever On</i>; J.R.R. Tolkien, Donald Swan. A collection of Tolkien’s poems set to music by Donald Swan published in 1967, which includes an essay by Tolkien discussing his <i>Namárië</i> poem.</li>
+</ul>
+
 <p>Finally, this course is not the first (and probably won’t be the last) attempt to present Quenya in a simplified format suitable for beginners. Although I don’t make direct references to them, prior Quenya courses that heavily influenced this one include:</p>
 
 <ul>
@@ -1070,7 +1078,7 @@
 <li><i>Quetin i Lambë Eldaiva</i>; Thorsten Renk; 2008; <a href="http://www.science-and-fiction.org/bookstore.html#lambe_eldaiva">http://www.science-and-fiction.org/bookstore.html#lambe_eldaiva</a>.</li>
 <li><i>Atanquesta: a NeoQuenya Primer</i>; Tamas Ferencz; 2018; <a href="https://docs.google.com/document/d/1gafhQ7YWI0xKXDBnkkOnMwJU63cvuygzbFFW6IurYkU/mobilebasic">https://middangeard.org.uk/atanquesta/</a>.</li>
 <li><i>Amanye Tenceli</i>; Måns Björkman; 1999-present; <a href="http://at.mansbjorkman.net">http://at.mansbjorkman.net</a>. This is not a Quenya course per se, but is the best discussion of Tengwar on the internet, and the main inspiration for the tengwar information in this course.</li>
-<li>Although incomplete, another major resource was Raccoon’s <a href="https://feophan.github.io/tenguesta_ngoldorinwa/">https://feophan.github.io/tenguesta_ngoldorinwa/</a>.</li>
+<li>Although incomplete, another major resource was Raccoon’s Tenguesta Goldorinwa: <a href="https://feophan.github.io/tenguesta_ngoldorinwa/">https://feophan.github.io/tenguesta_ngoldorinwa/</a>.</li>
 </ul>
 
 <h1><a id="c1-4"></a>1.4 Guided Reading: Frodo’s Greeting</h1>
@@ -1104,7 +1112,7 @@ Star (is shining) hour-to meeting-our-of
 
 <blockquote>Star is shining to hour of our meeting.</blockquote>
 
-<p>Now, Tolkien’s <u>actual</u> translation of the phrase was:</p>
+<p>Now, Tolkien’s actual translation of the phrase was:</p>
 
 <blockquote>A star shines on the hour of our meeting.</blockquote>
 
@@ -1114,7 +1122,7 @@ Star (is shining) hour-to meeting-our-of
 
 <p>Another curious thing is how Tolkien’s translation says “on the hour” rather than “to the hour”, as might be expected with the allative noun case <i>-nna</i>, usually translated “to” or “toward” in English. But recall that <i>-nna</i> really means “movement in the direction of”, and the intended meaning can depend on context. Here the shining star is above the meeting in question, and its light is shining on it from above. Hence “on the hour” sounds more natural in English. The directional noun cases and their possible meanings will be revisited in <a href="eldamo-intro-quenya-07.html">Chapter 7</a>.</p>
 
-<p>As for the Elvish phrase itself, what Tolkien <u>actually</u> wrote in <i>The Lord of the Rings</i> was <i>Elen síla lúmenn’ omentielvo</i>, with <i>lúmenn’</i> rather than <i>lúmenna</i>. This is because when a Quenya word ends in a weaker vowel,and the following word begins with a vowel, the final vowel of the first word is sometimes (but not always) dropped in speech through a process called elision. The dropped vowel is generally retained in spelling, except perhaps in written poetry where dropping the vowel may be useful for achieving a particular poetic meter (and also in prose representations of speech like in Frodo’s greeting). This and other changes to vowels as pronounced in speech are examined in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</p>
+<p>As for the Elvish phrase itself, what Tolkien actually wrote in <i>The Lord of the Rings</i> was <i>Elen síla lúmenn’ omentielvo</i>, with <i>lúmenn’</i> rather than <i>lúmenna</i>. This is because when a Quenya word ends in a weaker vowel and the following word begins with a vowel, the final vowel of the first word is sometimes (but not always) dropped in speech through a process called elision. The dropped vowel is generally retained in spelling, except perhaps in written poetry where dropping the vowel may be useful for achieving a particular poetic meter (and also in prose representations of speech like in Frodo’s greeting). This and other changes to vowels as pronounced in speech are examined in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</p>
 
 <div class="advanced-topic">
 <p><b>Advanced Topic:</b> One final thing of note is that there is another variation of the phrase in the first edition of <i>The Lord of the Rings</i>, where it was <i>elen síla lúmenn’ omentielmo</i>, with <i>omentie<u>lmo</u></i> rather than <i>omentie<u>lvo</u></i>. The reason for this difference is not a linguistic one: when Tolkien wrote the first edition of LotR, he imagined the possessive suffix “our” was <i>-lma</i>. In between the first and second edition, he changed his mind and decided it should be <i>-lva</i> instead. This demonstrates an important issue in the study of the Elvish languages: they were not fixed in Tolkien’s mind, and he made various adjustments to the grammar and other features of the languages over the six or so decades that he worked on them over his lifetime. These conceptual changes to the languages will be discussed as an advanced topic in <a href="eldamo-intro-quenya-02.html#c2-7">Chapter 2, Section §2.7</a>.</p>
