--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -415,7 +415,7 @@
 <li><b>tul-</b> <i>v.</i> “to come”
 <ul><li><i>pa.t.</i> <b>túlë</b> “came”</li></ul></li>
 <li><b>caita-</b> <i>v.</i> “to lie (down)”
-<ul><li><i>pa.t.</i> <b>cainë</b> “lay”</li></ul></li>
+<ul><li><i>pa.t.</i> <b>cainë</b> “lay (down)”</li></ul></li>
 </ul>
 
 <p>A few notes on the vocabulary list above:</p>
@@ -1034,7 +1034,7 @@
 
 <ul>
 <li>Note ¹: As previously noted, Quenya has two different words for “man”, one for a human person of any gender (<i>atan</i>) and another for a male person of any species (<i>nér</i>). In English translations for this course, whenever we say “man” without any qualifiers we are referring to <i>atan</i> (a human) and when we mean <i>nér</i> we will specify “man [male]”. This ambiguity is a limitation of English, not Quenya.</li>
-<li>Note ²: The usual word for “elf” is <i>elda</i>, but strictly speaking this term only applies to those Elves who left on the march to Valinor, and excludes those Elves who refused the journey (the Avari). The technical term for any Elf is <i>quendë</i>, but this is rarely used outside of compounds like <i>Moriquen</i> (<i>Moriquend-</i>) “Dark Elf” and <i>Calaquen</i> (<i>Calaquend-</i>) “Light Elf”. The related word <i>quén</i> (<i>quen-</i>) is used for “person” of any speaking race, including Men and Dwarves (and strictly speaking also Orcs, though an Elf would be reluctant to call them so).</li>
+<li>Note ²: The usual word for “elf” is <i>elda</i>, but strictly speaking this term only applies to those Elves who left on the march to Valinor, and excludes those Elves who refused the journey (the Avari). The technical term for any Elf is <i>quendë</i>, but this is rarely used outside of compounds like <i>Moriquen</i> (<i>Moriquend-</i>) “Dark Elf” and <i>Calaquen</i> (<i>Calaquend-</i>) “Light Elf”. The related word <i>quén</i> (<i>quen-</i>) is used for “person” of any speaking race, including Men and Dwarves (and strictly speaking also Orcs, though an Elf might be reluctant to call them so).</li>
 </ul>
 
 <ul class="vocab-list">
@@ -1706,7 +1706,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <p>As with Frodo’s greeting, the actual Elvish phrase published in <i>The Lord of the Rings</i> shows some elision (vowel loss): <i>tenn’ Ambar-metta</i> rather than <i>tenna Ambar-metta</i> as given above. Also note how the long vowel of <i>Endórë</i> shortens when the directional case suffix <i>-nna</i> is added: <i>Endorenna</i>, not **<i>Endórenna</i>. These subtle vowel shifts will be discussed in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</p>
 
-<p>The last complicated bit for this analysis is <i>hildinyar</i> “my heirs”. Based on #<i>hildë</i> “heir” and the rules described so far, the expected form would be <i>hildenyar</i>. There are a few of possible explanations, all of them quite technical. For this reason, we are deferring a discussion of <i>hildinyar</i> vs. <i>hildenyar</i> until <a href="eldamo-intro-quenya-07.html">Chapter 7</a> when we discuss the possessive pronouns.</p>
+<p>The last complicated bit for this analysis is <i>hildinyar</i> “my heirs”. Based on #<i>hildë</i> “heir” and the rules described so far, the expected form would be <i>hildenyar</i>. There are a few of possible explanations, all of them quite technical. For this reason, we are deferring a discussion of <i>hildinyar</i> vs. <i>hildenyar</i> until <a href="eldamo-intro-quenya-03.html#c3-2-3">Chapter 3, Section §3.2.3</a> when we discuss the possessive pronouns.</p>
 
 <div class="advanced-topic">
 <h2><a id="c2-7"></a>2.7 Advanced Topic: Conceptual Development of Quenya</h2>
@@ -1719,7 +1719,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b><a href="#c2-7-5">2.7.5 More on Neologisms</a></b></li>
 </ul>
 
-<p>When most people think of Tolkien’s Elvish languages, they think of them as presented in <i>The Lords of the Rings</i> in a relatively polished form. But Tolkien worked on the Elvish languages throughout his life. Because of publications like <i>The History of Middle-earth</i> series and the academic journals <i>Parma Eldalamberon</i> (PE) and <i>Vinyar Tengwar</i> (VT), we have access to numerous drafts of Tolkien’s linguistic documents, and can study how Tolkien’s ideas on the languages evolved over his life. For the development of Quenya, it is common for scholars to divide Tolkien’s work up into three broad periods:</p>
+<p>When most people think of Tolkien’s Elvish languages, they think of them as they are presented in <i>The Lords of the Rings</i> in a relatively polished form. But Tolkien worked on the Elvish languages throughout his life. Because of publications like <i>The History of Middle-earth</i> series and the academic journals <i>Parma Eldalamberon</i> (PE) and <i>Vinyar Tengwar</i> (VT), we have access to numerous drafts of Tolkien’s linguistic documents, and can study how Tolkien’s ideas on the languages evolved over his life. For the development of Quenya, it is common for scholars to divide Tolkien’s work up into three broad periods:</p>
 
 <ul>
 <li><b>Early Qenya</b> (ᴱQ): Qenya of the 1910s and 20s.
@@ -1745,7 +1745,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <p>This is not to say the names in <i>The Lord of the Rings</i> were invented willy-nilly. They were largely based on the foundation of <i>The Etymologies</i> from the 1930s. But <i>The Lord of the Rings</i> is over a half million words long, and in any work of that size some mistakes are inevitable. The character of WPP is therefore different from the earlier works like the <i>Qenya Lexicon</i> and <i>The Etymologies</i>: it existed primarily as a way of explaining the Elvish words Tolkien already had rather than inventing new words as was the case with earlier vocabulary lists.</p>
 
-<p>Tolkien’s later work on his languages is therefore of a curious character. He continued to innovate and refine the features of the Elvish languages, but he also spent time figuring out how to make those features compatible with his already-published works. Like <i>The Silmarillion</i>, Tolkien never produced a “finished” version of his Elvish languages, and his work on the languages was continued until it was interrupted by his death in 1973.</p>
+<p>Tolkien’s later work on his languages is therefore of a curious character. He continued to innovate and refine the features of the Elvish languages, but he also spent time figuring out how to make those features compatible with his already-published works. Like <i>The Silmarillion</i>, Tolkien never produced a “finished” version of his Elvish languages, and his work on the languages continued until it was interrupted by his death in 1973.</p>
 
 <p><a id="c2-7-4"></a><b>2.7.4 Neo-Quenya (post-Tolkien):</b> Very little was known about Tolkien’s Elvish languages at the time of his death. It was not until <i>The History of Middle-earth</i> series was published in 1980s, followed by the linguistic articles in the academic journals <i>Parma Eldalamberon</i> and <i>Vinyar Tengwar</i> beginning in the late 90s, that the rest of the world got an inkling of the depth and complexity of his languages. Both the book series and the academic journals began publishing the earliest material first, putting students of Elvish in the peculiar position of knowing more about the Elvish languages as Tolkien imagined them in his youth than they did about his later writings.</p>
 
@@ -1866,7 +1866,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <ul>
 <li>Note ¹: As previously noted, Quenya has two different words for “man”, one for a human person of any gender (<i>atan</i>) and another for a male person of any species (<i>nér</i>). In English translations for this course, whenever we say “man” without any qualifiers we are referring to <i>atan</i> (a human) and when we mean <i>nér</i> we will specify “man [male]”. This ambiguity is a limitation of English, not Quenya.</li>
-<li>Note ²: The usual word for “elf” is <i>elda</i>, but strictly speaking this term only applies to those Elves who left on the march to Valinor, and excludes those Elves who refused the journey (the Avari). The technical term for any Elf is <i>quendë</i>, but this is rarely used outside of compounds like <i>Moriquen</i> (<i>Moriquend-</i>) “Dark Elf” and <i>Calaquen</i> (<i>Calaquend-</i>) “Light Elf”. The related word <i>quén</i> (<i>quen-</i>) is used for “person” of any speaking race, including Men and Dwarves (and strictly speaking also Orcs, though an Elf would be reluctant to call them so).</li>
+<li>Note ²: The usual word for “elf” is <i>elda</i>, but strictly speaking this term only applies to those Elves who left on the march to Valinor, and excludes those Elves who refused the journey (the Avari). The technical term for any Elf is <i>quendë</i>, but this is rarely used outside of compounds like <i>Moriquen</i> (<i>Moriquend-</i>) “Dark Elf” and <i>Calaquen</i> (<i>Calaquend-</i>) “Light Elf”. The related word <i>quén</i> (<i>quen-</i>) is used for “person” of any speaking race, including Men and Dwarves (and strictly speaking also Orcs, though an Elf might be reluctant to call them so).</li>
 </ul>
 
 <p><b><u>Attributes:</u></b></p>
@@ -2008,7 +2008,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b>celu-</b> <i>v.</i> “to flow (forth)”
 <ul><li><i>pa.t.</i> <b>celunë</b> “flowed (forth)”</li></ul></li>
 <li><b>caita-</b> <i>v.</i> “to lie (down)”
-<ul><li><i>pa.t.</i> <b>cainë</b> “lay”</li></ul></li>
+<ul><li><i>pa.t.</i> <b>cainë</b> “lay (down)”</li></ul></li>
 <li><b>fara-</b> <i>v.</i> “to hunt”
 <ul><li><i>pa.t.</i> <b>faranë</b> “hunted”</li></ul></li>
 <li><b>metta</b> <i>n.</i> “end”</li>
