--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
@@ -939,7 +939,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <ul class="vocab-list">
 <li><b>ala-</b> <i>v.</i> “to grow (plants); to thrive” ¹
 <ul><li><i>pa.t.</i> <b>alanë</b> “grew, thrived”</li></ul></li>
-<li><b>alda</b> <i>n.</i> “(broad) tree” ²</li>
+<li><b>alda</b> <i>n.</i> “tree” ²</li>
 <li><b>erdë</b> <i>n.</i> “seed”</li>
 <li><b>lassë</b> <i>n.</i> “leaf”</li>
 <li><b>losta-</b> <i>v.</i> “to bloom”
@@ -960,7 +960,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <ul>
 <li>Note ¹: The verb <i>ala-</i> only means “grow” with respect to plants. It can be used intransitively of plants themselves growing: <i>i alda alanë</i> “the tree grew”. It can also be used transitively for people growing plants: <i>i elda alanë lóti</i> “the elf grew flowers”. When used intransitively of people, it means “thrive”: <i>i elda alanë</i> “the elf thrived”.</li>
-<li>Note ²: The words <i>alda</i> and <i>ornë</i> both refer to trees, but <i>ornë</i> is for tall straight trees like pines, and <i>alda</i> for broad trees like oaks.</li>
+<li>Note ²: The words <i>alda</i> and <i>ornë</i> both refer to trees, but <i>ornë</i> is for tall straight trees like pines, and <i>alda</i> is for broad trees like oaks or as a generic word for all trees.</li>
 </ul>
 
 <h2><a id="c5-3-3"></a>5.3.3 Section Summary</h2>
@@ -1685,7 +1685,7 @@ to whom the air gives kisses.
 <li><b>indyo</b> <i>n.</i> “grandson”</li>
 <li><b>intya</b> <i>n.</i> “guess, notion”</li>
 <li><b>nyellë</b> <i>n.</i> “bell”</li>
-<li><b>tyelpë</b> <i>n.</i> “silver”</li>
+<li><b>tyelpë</b> <i>n.</i> “silver, money”</li>
 <li><b>umbar</b> (<b>umbart-</b>) <i>n.</i> “fate”</li>
 <li><b>ungwë</b> <i>n.</i> “spider’s web”</li>
 <li><b>unquë</b> <i>n.</i> “a hollow”</li>
@@ -1753,7 +1753,7 @@ to whom the air gives kisses.
 <ul class="vocab-list">
 <li><b>ala-</b> <i>v.</i> “to grow (plants); to thrive” ¹
 <ul><li><i>pa.t.</i> <b>alanë</b> “grew, thrived”</li></ul></li>
-<li><b>alda</b> <i>n.</i> “(broad) tree” ²</li>
+<li><b>alda</b> <i>n.</i> “tree” ²</li>
 <li><b>erdë</b> <i>n.</i> “seed”</li>
 <li><b>lassë</b> <i>n.</i> “leaf”</li>
 <li><b>losta-</b> <i>v.</i> “to bloom”
@@ -1774,7 +1774,7 @@ to whom the air gives kisses.
 
 <ul>
 <li>Note ¹: The verb <i>ala-</i> only means “grow” with respect to plants. It can be used intransitively of plants themselves growing: <i>i alda alanë</i> “the tree grew”. It can also be used transitively for people growing plants: <i>i elda alanë lóti</i> “the elf grew flowers”. When used intransitively of people, it means “thrive”: <i>i elda alanë</i> “the elf thrived”.</li>
-<li>Note ²: The words <i>alda</i> and <i>ornë</i> both refer to trees, but <i>ornë</i> is for tall straight trees like pines, and <i>alda</i> for broad trees like oaks.</li>
+<li>Note ²: The words <i>alda</i> and <i>ornë</i> both refer to trees, but <i>ornë</i> is for tall straight trees like pines, and <i>alda</i> is for broad trees like oaks or as a generic word for all trees.</li>
 </ul>
 
 <p><b><u>Motion:</u></b></p>
@@ -1882,8 +1882,9 @@ to whom the air gives kisses.
 <li><b>canya-</b> <i>v.</i> “*to command”
 <ul><li><i>pa.t.</i> <b>canyane</b> “commanded”</li></ul></li>
 <li><b>cendë</b> <i>n.</i> “point”</li>
-<li><b>-incë/-iccë</b> <i>suf.</i> “diminutive” ¹</li>
-<li><b>ista-</b> <i>v.</i> “to know”</li>
+<li><b>-incë/-iccë</b> <i>suf.</i> “(diminutive)” ¹</li>
+<li><b>ista-</b> <i>v.</i> “to know”
+<ul><li><i>pa.t.</i> <b>sintë</b> “knew”</li></ul></li>
 <li><b>linda</b> <i>adj.</i> “soft, gentle, light”</li>
 <li><b>minna</b> <i>prep.</i> “into”</li>
 <li><b>miquë</b> <i>n.</i> “kiss”</li>
