--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
@@ -719,7 +719,6 @@
 
 <h2><a id="c6-3-4"></a>6.3.4 Vocabulary: Time</h2>
 
-
 <p>Here are some vocabulary words having to do with time:</p>
 
 <ul class="vocab-list">
@@ -730,18 +729,18 @@
 <li><b>metta</b> <i>n.</i> “ending [temporal]”</li>
 <li><b>né</b> <i>adv.</i> “ago”</li>
 <li><b>nessa</b> <i>adj.</i> “young”</li>
-<li><b>nó</b> <i>prep.</i> “before [time]; at back [place]” ³</li>
+<li><b>nó</b> <i>prep.</i> “before [time]; at back of [place]” ³</li>
 <li><b>oialë</b> <i>adv.</i> “forever”</li>
 <li><b>pusta-</b> <i>v.</i> “to stop”
 <ul><li><i>pa.t.</i> *<b>pustanë</b> “stopped”</li></ul></li>
 <li><b>ron(go)</b> <i>adv.</i> “soon”</li>
 <li><b>sí</b> <i>adv.</i> “now”</li>
+<li><b>tá</b> <i>adv.</i> “then”</li>
 <li><b>telya-</b> <i>v.</i> “to finish”
 <ul><li><i>pa.t.</i> *<b>telyanë</b> “finished”</li></ul></li>
 <li><b>ter</b> <i>prep.</i> “through”</li>
 <li><b>tulma</b> <i>n.</i> “event”</li>
 <li><b>vinya</b> <i>adj.</i> “new, young”</li>
-<li><b>yá</b> <i>adv.</i> “then, formerly [past]”</li>
 <li><b>yára</b> <i>adj.</i> “old”</li>
 <li><b>yesta</b> <i>n.</i> “beginning”</li>
 </ul>
@@ -1535,18 +1534,18 @@ and of the One who is above all thrones for ever.
 <li><b>metta</b> <i>n.</i> “ending [temporal]”</li>
 <li><b>né</b> <i>adv.</i> “ago”</li>
 <li><b>nessa</b> <i>adj.</i> “young”</li>
-<li><b>nó</b> <i>prep.</i> “before [time]; at back [place]” ³</li>
+<li><b>nó</b> <i>prep.</i> “before [time]; at back of [place]” ³</li>
 <li><b>oialë</b> <i>adv.</i> “forever”</li>
 <li><b>pusta-</b> <i>v.</i> “to stop”
 <ul><li><i>pa.t.</i> *<b>pustanë</b> “stopped”</li></ul></li>
 <li><b>ron(go)</b> <i>adv.</i> “soon”</li>
 <li><b>sí</b> <i>adv.</i> “now”</li>
+<li><b>tá</b> <i>adv.</i> “then”</li>
 <li><b>telya-</b> <i>v.</i> “to finish”
 <ul><li><i>pa.t.</i> *<b>telyanë</b> “finished”</li></ul></li>
 <li><b>ter</b> <i>prep.</i> “through”</li>
 <li><b>tulma</b> <i>n.</i> “event”</li>
 <li><b>vinya</b> <i>adj.</i> “new, young”</li>
-<li><b>yá</b> <i>adv.</i> “then, formerly [past]”</li>
 <li><b>yára</b> <i>adj.</i> “old”</li>
 <li><b>yesta</b> <i>n.</i> “beginning”</li>
 </ul>
