--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-04.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-04.html
@@ -26,7 +26,7 @@
 <li><b><a href="#c4-1-1">4.1.1 Simple Tengwar Consonants</a></b></li>
 <li><b><a href="#c4-1-2">4.1.2 Tengwar Vowel Tehta</a></b></li>
 <li><b><a href="#c4-1-3">4.1.3 Spelling Examples</a></b></li>
-<li><b><a href="#c4-1-4">4.1.4 Vocabulary: Tengwar Names I</a></b></li>
+<li><b><a href="#c4-1-4">4.1.4 Vocabulary: Tengwar Names 1</a></b></li>
 <li class="advanced-topic"><b><a href="#c4-1-5">4.1.5 How do we know this?</a></b></li>
 <li><b><a href="#c4-1-6">4.1.6 Simplified Tengwar Summary</a></b></li>
 <li><b><a href="#x4-1">Exercise 4.1</a></b></li>
@@ -1004,7 +1004,7 @@ Red tehta don’t work in safari
 
 <ul class="vocab-list">
 <li><b>apsa</b> <i>n.</i> “meat (cooked)”</li>
-<li><b>culuma</b> <i>n.</i> “orange”</li>
+<li><b>culuma</b> <i>n.</i> “orange [fruit]”</li>
 <li><b>lav-</b> <i>v.</i> “to lick”
 <ul><li><i>pa.t.</i> <b>lávë</b> “licked”</li></ul></li>
 <li><b>lamba</b> <i>n.</i> “tongue (physical)” ¹</li>
@@ -1552,7 +1552,7 @@ This summary outlines common past forms of basic verbs, but not every verb follo
 <li><b>niqu-</b> <i>v.</i> “to be cold” ⁴
 <ul><li><i>pa.t.</i> <b>nicunë</b> “was cold”</li></ul></li>
 <li><b>nén</b> (<b>nen-</b>) <i>n.</i> “water”</li>
-<li><b>nár</b> <i>n.</i> “fire”</li>
+<li><b>nárë</b> <i>n.</i> “fire”</li>
 <li><b>ringa</b> <i>adj.</i> “cold”</li>
 <li><b>ringë</b> (<b>ringi-</b>) <i>n.</i> “cold”</li>
 <li><b>sar</b> (<b>sarn-</b>) <i>n.</i> “(small) stone”</li>
@@ -1613,10 +1613,10 @@ This summary outlines common past forms of basic verbs, but not every verb follo
 </ol>
 
 <ol class="exercise-list" start="7">
-<li><i>Nár úra.</i></li>
+<li><i>Nárë úra.</i></li>
 <li><i>Nén linquë.</i></li>
 <li><i>Helcë ringa.</i></li>
-<li><i>Á calta nár, mecin.</i></li>
+<li><i>Á calta nárë, mecin.</i></li>
 <li><i>I vista lauca i coässë.</i></li>
 <li><i>Olvar alar cemenessë.</i></li>
 </ol>
@@ -1624,10 +1624,10 @@ This summary outlines common past forms of basic verbs, but not every verb follo
 <p>Tengwar answers:</p>
 
 <ol class="exercise-list tengwar-block" start="7">
-<li><span class="transcribe" data-lang="q" data-value="Nár úra">Nár úra</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Nárë úra">Nárë úra</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Nén linquë">Nén linquë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Helcë ringa">Helcë ringa</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Á calta nár, mecin">Á calta nár, mecin</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Á calta nárë mecin">Á calta nárë, mecin</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I vista lauca i coässë">I vista lauca i coässë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Olvar alar cemenessë">Olvar alar cemenessë</span></li>
 </ol>
@@ -1733,7 +1733,7 @@ like gulls wailing?
 <li><b>calma</b> <i>n.</i> “lamp” - #3 <span class="tengwar">a</span></li>
 <li><b>hwesta</b> <i>n.</i> “breeze” - #12 <span class="tengwar">c</span></li>
 <li><b>hyarmen</b> <i>n.</i> “south” - #33 <span class="tengwar">9</span></li>
-<li><b>lambë</b> <i>n.</i> “tongue” - #27 <span class="tengwar">j</span></li>
+<li><b>lambë</b> <i>n.</i> “tongue; language” - #27 <span class="tengwar">j</span></li>
 <li><b>malta</b> <i>n.</i> “gold” - #18 <span class="tengwar">t</span></li>
 <li><b>nwalmë</b> [<b>ñ</b>] <i>n.</i> “torment” - #20 <span class="tengwar">b</span></li>
 <li><b>númen</b> <i>n.</i> “west” - #17 <span class="tengwar">5</span></li>
@@ -1745,7 +1745,7 @@ like gulls wailing?
 <li><b>súlë</b> [<b>þ</b>] <i>n.</i> “breath; (movement of) spirit” - #9 <span class="tengwar">3</span></li>
 <li><b>tinco</b> <i>n.</i> “metal” - #1 <span class="tengwar">1</span></li>
 <li><b>úrë</b> <i>n.</i> “heat” - #35 <span class="tengwar">.</span></li>
-<li><b>vilya</b> <i>n.</i> “air, sky” - #24 <span class="tengwar">n</span></li>
+<li><b>vilya</b> [<b>w-</b>] <i>n.</i> “air, sky” - #24 <span class="tengwar">n</span></li>
 <li><b>yanta</b> <i>n.</i> “bridge” - #35 <span class="tengwar">l</span></li>
 </ul>
 
@@ -1800,7 +1800,7 @@ like gulls wailing?
 
 <ul class="vocab-list">
 <li><b>apsa</b> <i>n.</i> “meat (cooked)”</li>
-<li><b>culuma</b> <i>n.</i> “orange”</li>
+<li><b>culuma</b> <i>n.</i> “orange [fruit]”</li>
 <li><b>lav-</b> <i>v.</i> “to lick”
 <ul><li><i>pa.t.</i> <b>lávë</b> “licked”</li></ul></li>
 <li><b>lamba</b> <i>n.</i> “tongue (physical)” ¹</li>
@@ -1900,7 +1900,7 @@ like gulls wailing?
 <li><b>niqu-</b> <i>v.</i> “to be cold” ⁴
 <ul><li><i>pa.t.</i> <b>nicunë</b> “was cold”</li></ul></li>
 <li><b>nén</b> (<b>nen-</b>) <i>n.</i> “water”</li>
-<li><b>nár</b> <i>n.</i> “fire”</li>
+<li><b>nárë</b> <i>n.</i> “fire”</li>
 <li><b>ringa</b> <i>adj.</i> “cold”</li>
 <li><b>ringë</b> (<b>ringi-</b>) <i>n.</i> “cold”</li>
 <li><b>sar</b> (<b>sarn-</b>) <i>n.</i> “(small) stone”</li>
