--- a/src/main/webapp/intro-quenya/index.html
+++ b/src/main/webapp/intro-quenya/index.html
@@ -28,13 +28,20 @@
 <li><b><a href="eldamo-intro-quenya-05.html">Chapter 5</a></b></li>
 <li><b><a href="eldamo-intro-quenya-06.html">Chapter 6</a></b></li>
 <li><b><a href="eldamo-intro-quenya-07.html">Chapter 7</a></b></li>
+<li><b><a href="eldamo-intro-quenya-08.html">Chapter 8</a></b></li>
+<li><b><a href="eldamo-intro-quenya-09.html">Chapter 9</a></b></li>
 </ul>
 
-<p>Memrise vocabulary courses:</p>
+<center><h1><u>Memrise Vocabulary Courses</u></h1></center>
+
+<p>Here are some links to vocabulary drills on the Memrise platform. To make typing answers easier, the memrise vocabulary omits all diaresis: <i>taure</i> not <i>taurë</i>.</p>
 
 <ul>
 <li><b><a href="https://app.memrise.com/course/6329970/eldamo-intro-quenya-ch-1/">Vocabulary for Chapter 1</a></b></li>
 <li><b><a href="https://app.memrise.com/course/6334816/eldamo-intro-quenya-ch-2/">Vocabulary for Chapter 2</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6340132/eldamo-intro-quenya-ch-3/">Vocabulary for Chapter 3</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6343426/eldamo-intro-quenya-ch-4/">Vocabulary for Chapter 4</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6350684/eldamo-intro-quenya-ch-5/">Vocabulary for Chapter 5</a></b></li>
 </ul>
 
 </body>
